Change comment to a postgres db